# PixelWar

pixel-war/: Anchor.toml  Cargo.toml  display.js  get_pda.js  init.js  initialize_all.js  package-lock.json  package.json  pixel_war_idl.json
pixel-war-display/: .env  config-overrides.js  package-lock.json  package.json
pixel-war-display/public/: index.html
pixel-war-display/src/: App.css  App.js  ColorPicker.css  ColorPicker.js  FreeVersionCanvas.js  index.css  index.js
pixel-war-server/: package-lock.json  package.json  server.js
pixel-war/programs/pixel-war/: Cargo.toml
pixel-war/programs/pixel-war/src/: lib.rs
